# aws_okta_mcp_server

./: .dockerignore  .env.sample  .gitignore  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt  smithery.yaml
clients/: doNOtUse-mcp-cli-stdio-client.py  doNotUse-mcp-cli-sse-client.py  doNotUse-mcp-cli-streamable-client.py  doNotUse-mcp-cli-test-sampling.py  okta-mcp-client.py
docs/: MCP-spec-upgrade-README.md
okta_mcp/: server.py
okta_mcp/capabilities/: elicitation.py  sampling.py
okta_mcp/data/: dummy_data.json  okta-event-codes.csv
okta_mcp/routes/: admin.py
okta_mcp/tools/: apps_tools.py  datetime_tools.py  group_tools.py  log_events_tools.py  policy_network_tools.py  tool_registry.py  user_tools.py
okta_mcp/utils/: error_handling.py  fastmcp_middleware_utils.py  logging.py  model_provider.py  normalize_okta_responses.py  okta_client.py  request_manager.py
scripts/: docker-builds.ps1
