[project]
name = "okta-mcp-server"
version = "1.0.0"
description = "Model Context Protocol (MCP) server for Okta identity management"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic",
    "pydantic-ai==0.2.18",
    "okta",
    "python-dotenv",
    "uvicorn",
    "fastapi",
    "dateparser",
    "fastmcp>=2.10.0",
]

[project.scripts]
okta-mcp-server = "okta_mcp.main:console_main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["okta_mcp"]

[tool.hatch.version]
path = "okta_mcp/__init__.py"
